--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,36 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
-# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+ org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+ org.gradle.parallel=true
+
+
+BINTRAY_KEY=your key
+BINTRAY_USER=your user name
+
+VERSION_NAME=1.0.3
+VERSION_CODE=103
+
+GROUP=com.aijia.packer
+POM_ARTIFACT_ID=packerplugin
+POM_NAME=AndroidPacker
+POM_INCEPTION=2016
+POM_DESCRIPTION=A Gradle Plugin For Apk Packer
+POM_URL=https://github.com/zhouaijia/packer-plugin
+POM_SCM_URL=https://github.com/zhouaijia/packer-plugin
+POM_SCM_CONNECTION=https://github.com/zhouaijia/packer-plugin.git
+POM_SCM_DEV_CONNECTION=https//github.com/zhouaijia/packer-plugin.git
+POM_LICENSE_NAME=Apache License,Version 2.0
+POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
+POM_DEVELOPER_ID=zhouaijia
+POM_DEVELOPER_NAME=Aijia Zhou
+POM_DEVELOPER_EMAIL=packer-plugin@zhouaijia.com
+MIN_SDK_VERSION=14
+TARGET_SDK_VERSION=230
+COMPILE_SDK_VERSION=23
+BUILD_TOOLS_VERSION=23.0.2
