optimize the code structure

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -58,14 +58,14 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.aijia.packer:packerplugin:1.0.3'
+        classpath 'com.aijia.packer:packerplugin:1.0.4'
     }
 }
 
 apply plugin: 'packer'
 
 packer {
-    archiveOutput = file(new File(project.rootProject.buildDir.path, "myapks"))
+    targetOutputDir = file(new File(project.rootProject.buildDir.path, "myApk"))
     manifestMatcher = ['UMENG_CHANNEL','XXSY_CHANNEL_ID']
     apkPrefixName = 'xxsy_'
 }
