--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -12,18 +12,13 @@ android {
         versionName "1.0"
     }
 
-    signingConfigs {
-        release {
-            storeFile file("android.keystore")
-            storePassword "android"
-            keyAlias "android"
-            keyPassword "android"
-        }
-    }
 
+    signingConfigs {
+        release {}
+    }
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            //signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -58,7 +53,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.aijia.packer:packerplugin:1.0.7'
+        classpath 'com.aijia.packer:packerplugin:1.0.8'
     }
 }
 
